src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

@tailwind utilities;

@layer utilities {
	.maskProjectsTitle {
		background: radial-gradient(circle farthest-corner at center center, #c0bebe 0%, #fff 44%);
		-webkit-background-clip: text;
		background-clip: text;
		-webkit-text-fill-color: transparent;
		color: transparent;
	}

	.maskProjectsTitleDark {
		background: radial-gradient(circle farthest-corner at center center, #545454 0%, #181818 34%);
		-webkit-background-clip: text;
		background-clip: text;
		-webkit-text-fill-color: transparent;
		color: transparent;
	}
}

:root {
	--bg: #fff;

	--text-selection-background: #121212;
	--text-selection-foreground: #fff;

	--gradientConicWelcomeBubble: conic-gradient(from 120deg,
			#ddd 10%, #fff, #ddd 99%);
	--borderGradientConicWelcomeBubble: none;
}

#rootDarkMode {
	--bg: #000;

	--text-selection-background: #f2f2f7;
	--text-selection-foreground: #181818;

	--gradientConicWelcomeBubble: conic-gradient(from -45deg,
			#171717 10%, #000, #171717 90%);
	--borderGradientConicWelcomeBubble: conic-gradient(from 20deg,
			transparent 60%, #6f6f6f, transparent);
}

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

body {
	font-family: "Inter", system-ui;
	background: var(--bg);
	overflow-x: hidden;
}

html {
	scroll-behavior: smooth;
}

::selection {
	background-color: var(--text-selection-background);
	color: var(--text-selection-foreground);
}

.hidden {
	display: none;
}

@keyframes enteringMenuNavBar {
	0% {
		transform: scale(0.2) translateX(64px) translateY(-64px);
		opacity: 0;
	}

	60% {
		transform: scale(1.15);
		opacity: 1;
	}

	100% {
		transform: scale(1) translateX(0) translateY(0);
		opacity: 1;
	}
}

.keyframe-entering-navbar {
	animation: enteringMenuNavBar 0.5s ease;
}

